css added and index modified

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>git</title>
 </head>
 <body>
-    <p> introduction to github</p>
+    <h1> introduction to github</h1>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo explicabo facilis molestiae? Et obcaecati veritatis suscipit placeat recusandae asperiores rem repudiandae error fuga iusto maxime veniam, perspiciatis voluptas quam facere.</p>
 </body>
 </html>
